# europython2023-package

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebook/: 1_data_loading.ipynb  2_preprocessing.ipynb  3_EDA.ipynb  4_prediction.ipynb  5_using_the_package.ipynb  6_installing_and_using_the_package.ipynb
src/adult_data_analysis/: __init__.py  data_load.py  preprocessing.py  visualization.py
